fix gradient under graph on firefox

--- a/client/components/_graph.styl
+++ b/client/components/_graph.styl
@@ -27,7 +27,7 @@
       height 194px
 
   &__more-info
-    background-image linear-gradient(0deg, $color-tertiary 0%, $color-secondary 100%)
+    background-image linear-gradient(to bottom, $color-secondary, $color-tertiary)
     color $font-color-secondary
     height 70px
     position relative
